fix: correct page class definition and adjust overflow property in mixins

--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -13,7 +13,7 @@ h3 {
   overflow: hidden;
 }
 
-.page {
+page {
   font-family: 'Figtree', sans-serif;
   font-style: normal;
   font-weight: 400;
